--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.herosoft</groupId>
+    <groupId>org.example.herosoft</groupId>
     <artifactId>spring-cloud-alibaba-stack</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
@@ -13,7 +13,7 @@
     </modules>
 
     <packaging>pom</packaging>
-    <name>spring-cloud-alibaba-nacos-discovery</name>
+    <name>spring-cloud-alibaba-stack</name>
     <description>Example demonstrating how to use nacos discovery with spring cloud alibaba framework</description>
 
     <properties>
