--- a/spring-cloud-security/pom.xml
+++ b/spring-cloud-security/pom.xml
@@ -2,14 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-cloud-alibaba-stack</artifactId>
-        <groupId>org.herosoft</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.example.herosoft</groupId>
+        <artifactId>spring-cloud-alibaba-stack</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>spring-cloud-security</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -74,7 +77,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.example.herosoft.springclouddemo.NacosSeviceSecurityApplication</mainClass>
+                    <mainClass>com.example.herosoft.springclouddemo.NacosServiceSecurityApplication</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
