--- a/spring-cloud-gateway/src/main/resources/application.yml
+++ b/spring-cloud-gateway/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
             - Path=/*/**
     nacos:
       discovery:
-        server-addr: nacos1:8848,nacos2:8848,nacos3:8848
+        server-addr: 127.0.0.1:8848,127.0.0.1:8858,127.0.0.1:8868
         username: nacos
         password: nacos
