add product and order services

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>spring-cloud-gateway</module>
         <module>spring-cloud-common</module>
         <module>spring-cloud-user-service</module>
+        <module>spring-cloud-order-service</module>
+        <module>spring-cloud-order-service</module>
     </modules>
 
     <packaging>pom</packaging>
