--- a/spring-cloud-user-service/pom.xml
+++ b/spring-cloud-user-service/pom.xml
@@ -43,8 +43,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
 
