--- a/spring-cloud-product-service/pom.xml
+++ b/spring-cloud-product-service/pom.xml
@@ -44,6 +44,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
 
     </dependencies>
 
