--- a/spring-cloud-order-service/src/main/resources/application.yml
+++ b/spring-cloud-order-service/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
         server-addr: 127.0.0.1:8848,127.0.0.1:8858,127.0.0.1:8868
         username: nacos
         password: nacos
+    stream:
+      rocketmq:
+        binder:
+          name-server: 127.0.0.1:9876
   sleuth:
     sampler:
       probability: 1.0
@@ -29,6 +33,8 @@ spring:
     base-url: http://localhost:9411
     sender:
       type: web
+
+
 logging:
   level:
     root: info
