--- a/spring-cloud-security/src/main/resources/application.yml
+++ b/spring-cloud-security/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       probability: 1.0
   zipkin:
     discovery-client-enabled: false
-    base-url: http://localhost:9411
+    base-url: http://127.0.0.1:9411
     sender:
       type: web
 logging:
