--- a/spring-cloud-gateway/pom.xml
+++ b/spring-cloud-gateway/pom.xml
@@ -72,7 +72,6 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -87,8 +86,8 @@
                         </goals>
                     </execution>
                 </executions>
+                <version>2.2.2.RELEASE</version>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -97,6 +96,7 @@
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
+                <version>3.5.1</version>
             </plugin>
         </plugins>
     </build>
