--- a/spring-cloud-order-service/pom.xml
+++ b/spring-cloud-order-service/pom.xml
@@ -75,6 +75,7 @@
                         </goals>
                     </execution>
                 </executions>
+                <version>2.2.2.RELEASE</version>
             </plugin>
 
             <plugin>
@@ -85,6 +86,7 @@
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
+                <version>3.5.1</version>
             </plugin>
         </plugins>
     </build>
